# LovyanGFX

examples/Advanced/Cmake_SDL2/: CMakeLists.txt  CMakeSettings.json  LGFXSDL2.cpp  ReadME.md  main.cpp
src/lgfx/: boards.hpp
src/lgfx/utility/: ceport.h  lgfx_pngle.h  lgfx_qoi.c
src/lgfx/v1/: LGFXBase.hpp  lgfx_fonts.cpp
src/lgfx/v1_autodetect/: LGFX_AutoDetect_SDL2.hpp  common.hpp
